
 0.1.9:
    - 2018.
    - add methods: add-row, add-column
    - submatrix with 2 Int parameter works now as expected
    - added docs

 0.1.8:
    - 2018.3.20
    - added method: tensorProduct, alias infix op x, unicode alias ⊗
    - added method: conjugated, is-self-adjoint, is-unitary, is-positive-semidefinite
    - more property setting optimization in constructors
    - new category for methods: structural ops

 0.1.7:
    - 2018.3.18
    - added methods: elems, list-rows and list-columns, full
    - documented, but forgot to implement: commutative + and - op
    - limit gist for optimal shell output
    - change norm names rowsum => row-sum, columnsum => column-sum
    - added docs, operator got own section
    - started changelog

 0.1.6:
    - 2018.3.15
    - added methods: reduce-rows and reduce-columns, 
    - added and clarified docs

 0.1.5:
    - 2018.3.14
    - accessors column and row now return consistently lists (like diagonal)
    - expanded power of submatrix accessor
    - added ops: |.| as alias for determinant, and prefix - as alias for negated
    - renamed apply method to map
    - renamed negate method to negated (consistency, transposed and inverted)
    - added and clarified docs